<resources>
    <string name="app_name">Daily Groceries</string>
    <string name="search">Search</string>
    <string name="shop_groceries_items_through_daily_grocery_app_online_super_market_store_at_best_prices">Shop groceries items through daily grocery app online super market store at best prices</string>
    <string name="daily_groceries">Daily Groceries</string>
    <string name="todo">TODO</string>
    <string name="cart_image">cart image</string>
    <string name="item_design_recycler_view">item design recycler view</string>
    <string name="top_discounted_items">Top Discounted Items</string>
    <string name="select_categories">Select Categories</string>
    <string name="image_to_display_category">image to display category</string>
    <string name="select_a_category">Select a Category</string>
    <string name="cart_image2">cart_image2</string>
    <string name="back_to_main_activity">back to main activity</string>
    <string name="recently_viewed_items">Recently Viewed Items</string>
    <string name="unit">Unit</string>
    <string name="qty">qty</string>
    <string name="fruit_image">fruit image</string>
    <string name="textview">TextView</string>
    <string name="product_name">Product Name</string>
    <string name="enlarged_image">enlarged image</string>
    <string name="to_cart">to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="this_is_an_apple">This is an apple</string>
    <string name="apple">Apple</string>

</resources>